--- a/views/index.erb
+++ b/views/index.erb
@@ -32,9 +32,11 @@
       </li>
     </ul>
 
+    <br>
+    <br>
+
     <hr>
-    <br>
-    <br>
+
     <br>
     <br>
 
@@ -45,4 +47,19 @@
       <li><pre>$ brew install ffmpeg</pre></li>
     </ul>
   </section>
+
+  <br>
+  <br>
+
+  <hr>
+
+  <br>
+  <br>
+
+  <div class="text-center">
+    <a href="http://brnbw.com"><img src="http://brnbw.com/images/brnbw.png" width=100 alt=""></a>
+  </div>
+
+  <br>
+  <br>
 </div>
