Fix typo and style code blocks

--- a/client/App.scss
+++ b/client/App.scss
@@ -9,6 +9,12 @@ body {
   line-height: 1.5em;
 }
 
+code {
+  font-size: 1em;
+  font-family: 'Menlo', monospace;
+  color: #277;
+}
+
 #App {
   width: 100%;
   max-width: 800px;
